--- a/generator.html
+++ b/generator.html
@@ -5,97 +5,88 @@ Copia il codice e utilizzalo nella pagina <a href="verifier.html">verifier.html<
 
 
 <script>
-// === Parametri configurabili ===
-const QR1_EXPECTED = "GEN_KEY_1"; // testo che deve contenere il QR1 (fisso)
-const COORDS_JSON = "./coords.json"; // percorso al file esterno
+  // === Parametri configurabili ===
+  const QR1_EXPECTED = "GEN_KEY_1"; // <-- metti qui il testo esatto del tuo QR1 fisso
+  const COORDS_JSON = "./coords.json";
 
+  document.getElementById('qr1-hint').textContent = QR1_EXPECTED;
 
-document.getElementById('qr1-hint').textContent = QR1_EXPECTED;
+  // Stato
+  let keys = [];
+  let validated = false;
 
+  async function loadKeys() {
+    try {
+      const res = await fetch(COORDS_JSON, { cache: 'no-store' });
+      if (!res.ok) throw new Error('Impossibile caricare coords.json');
+      const data = await res.json();
+      keys = Object.keys(data || {});
+      document.getElementById('loadedInfo').textContent =
+        keys.length ? `${keys.length} codici disponibili` : 'Nessun codice in coords.json';
+    } catch (e) {
+      document.getElementById('loadedInfo').textContent = 'Errore nel caricamento di coords.json';
+      console.error(e);
+    }
+  }
 
-// Stato
-let keys = [];
-let validated = false;
+  // Genera codice selezionando una chiave già presente in coords.json
+  function pickRandomCode() {
+    if (!keys.length) return null;
+    const idx = Math.floor(Math.random() * keys.length);
+    return keys[idx];
+  }
 
+  function updateStatus(msg) {
+    document.getElementById('status').textContent = msg;
+  }
 
-async function loadKeys() {
-try {
-const res = await fetch(COORDS_JSON, { cache: 'no-store' });
-if (!res.ok) throw new Error('Impossibile caricare coords.json');
-const data = await res.json();
-keys = Object.keys(data || {});
-document.getElementById('loadedInfo').textContent = keys.length ? `${keys.length} codici disponibili` : 'Nessun codice in coords.json';
-} catch (e) {
-document.getElementById('loadedInfo').textContent = 'Errore nel caricamento di coords.json';
-console.error(e);
-}
-}
+  function showCode(code) {
+    document.getElementById('codeBox').textContent = code || '—';
+  }
 
+  // Avvio scanner QR
+  window.addEventListener('load', async () => {
+    await loadKeys();
 
-// Genera codice selezionando una chiave già presente in coords.json (per garantire corrispondenza)
-function pickRandomCode() {
-if (!keys.length) return null;
-const idx = Math.floor(Math.random() * keys.length);
-return keys[idx];
-}
+    const onScanSuccess = (decodedText) => {
+      if (validated) return; // già valido
+      if (decodedText === QR1_EXPECTED) {   // <-- QUI il confronto corretto
+        validated = true;
+        updateStatus('QR1 valido. Ora puoi generare un codice.');
+        document.getElementById('btnGen').disabled = false;
+        scanner.clear().catch(()=>{});
+      } else {
+        updateStatus('QR non valido. Riprova.');
+      }
+    };
 
+    const onScanFailure = (error) => { /* silenzioso */ };
 
-function updateStatus(msg) {
-document.getElementById('status').textContent = msg;
-}
+    const scanner = new Html5QrcodeScanner('reader', { fps: 10, qrbox: 250, rememberLastUsedCamera: true });
+    scanner.render(onScanSuccess, onScanFailure);
 
+    document.getElementById('btnGen').addEventListener('click', () => {
+      if (!validated) return;
+      const code = pickRandomCode();
+      if (!code) {
+        showCode('Nessun codice disponibile in coords.json');
+        return;
+      }
+      // opzionale: generazione random pura (max 10) → sostituisci con generateRandom(8,10)
+      showCode(code);
+    });
+  });
 
-function showCode(code) {
-document.getElementById('codeBox').textContent = code || '—';
-}
-
-
-// Avvio scanner QR
-window.addEventListener('load', async () => {
-await loadKeys();
-
-
-const onScanSuccess = (decodedText) => {
-if (validated) return; // già valido
-if (decodedText === QR1_EXPECTED) {
-validated = true;
-updateStatus('QR1 valido. Ora puoi generare un codice.');
-document.getElementById('btnGen').disabled = false;
-scanner.clear().catch(()=>{});
-} else {
-updateStatus('QR non valido. Riprova.');
-}
-};
-
-
-const onScanFailure = (error) => { /* silenzioso */ };
-
-
-const scanner = new Html5QrcodeScanner('reader', { fps: 10, qrbox: 250, rememberLastUsedCamera: true });
-scanner.render(onScanSuccess, onScanFailure);
-
-
-document.getElementById('btnGen').addEventListener('click', () => {
-if (!validated) return;
-const code = pickRandomCode();
-if (!code) {
-showCode('Nessun codice disponibile in coords.json');
-return;
-}
-// opzionale: se vuoi generare random puro (max 10), sostituisci con generateRandom(8,10)
-showCode(code);
-});
-});
-
-
-// Alternativa: generazione alfanumerica casuale (max 10)
-function generateRandom(minLen = 8, maxLen = 10) {
-const alphabet = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789'; // senza 0/O/1/I per leggibilità
-const len = Math.floor(Math.random() * (maxLen - minLen + 1)) + minLen;
-let out = '';
-for (let i = 0; i < len; i++) out += alphabet[Math.floor(Math.random() * alphabet.length)];
-return out;
-}
+  // Alternativa: generazione alfanumerica casuale (max 10)
+  function generateRandom(minLen = 8, maxLen = 10) {
+    const alphabet = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789'; // senza 0/O/1/I per leggibilità
+    const len = Math.floor(Math.random() * (maxLen - minLen + 1)) + minLen;
+    let out = '';
+    for (let i = 0; i < len; i++) out += alphabet[Math.floor(Math.random() * alphabet.length)];
+    return out;
+  }
 </script>
+
 </body>
 </html>
+
