Update QR1 validation instructions
Removed reference to 'coords.json' in instructions.

--- a/generator.html
+++ b/generator.html
@@ -29,7 +29,7 @@
   <div class="card">
     <h1>Generatore di Codice</h1>
     <p class="muted">
-      Scansiona il <strong>QR1</strong> per convalidare l'azione. Se valido, verrà generato un codice alfanumerico (max 10) presente in <code>coords.json</code>.
+      Scansiona il <strong>QR1</strong> per convalidare l'azione. Se valido, verrà generato un codice alfanumerico (max 10).
       <br> Testo atteso nel QR1: <span class="badge" id="qr1-hint"></span>
     </p>
 
