--- a/verifier.html
+++ b/verifier.html
@@ -29,7 +29,7 @@
   <div class="card">
     <h1>Verifica Codice → Coordinate UTM/UPS</h1>
     <p class="muted">
-      1) Scansiona il <strong>QR2</strong> per convalidare. 2) Inserisci il codice ricevuto. Se il codice è corretto, verranno mostrate le coordinate dal file <code>coords.json</code>.
+      1) Scansiona il <strong>QR2</strong> per convalidare. 2) Inserisci il codice ricevuto. Se il codice è corretto, verranno mostrate le coordinate.
       <br>Testo atteso nel QR2: <span class="badge" id="qr2-hint"></span>
     </p>
 
