Add image to generator.html

--- a/generator.html
+++ b/generator.html
@@ -27,6 +27,8 @@
 </head>
 <body>
   <div class="card">
+    <img src="cigno.png" alt="Cigno" style="display:block; margin: 0 auto 12px; max-width:200px; height:auto;">
+  <div class="card">
     <h1>Generatore di Codice</h1>
     <p class="muted">
       Scansiona il <strong>QR1</strong> per convalidare l'azione. Se valido, verrà generato un codice alfanumerico (max 10).
