Add image to verifier.html

--- a/verifier.html
+++ b/verifier.html
@@ -27,6 +27,8 @@
 </head>
 <body>
   <div class="card">
+    <img src="perla.png" alt="Perla" style="display:block; margin: 0 auto 12px; max-width:200px; height:auto;">
+  <div class="card">
     <h1>Verifica Codice → Coordinate UTM/UPS</h1>
     <p class="muted">
       1) Scansiona il <strong>QR2</strong> per convalidare. 2) Inserisci il codice ricevuto. Se il codice è corretto, verranno mostrate le coordinate.
